test-suite/tests/roundtrip/invalid/semantic/typecheck/allDiff/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/allDiff/03/input.essence:2:35:
  |
2 | such that b = alldifferent_except(false, [1, 2, 3, 4])
  |                                   ^^^^^
Type error:
	Expected: "Matrix or list"
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/allDiff/03/input.essence:2:42:
  |
2 | such that b = alldifferent_except(false, [1, 2, 3, 4])
  |                                          ^^^^^^^^^^^^
Type error:
	Expected: "int enum or bool"
	Got: matrix indexed by [int] of int

